Add h1 and main figure

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
     <h1><img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"></h1>
   </header>
 
+<main>
+
+  <h2>Hadrosaur</h2>
+  <figure>
+    <img src="images/hadrosaur.jpg" alt="">
+    <figcaption>  Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+  </figure>
+
+</main>
   Hadrosaur
   Iguanodon
   Stegosaurus
 
   ---
-
-  Hadrosaur
-  Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.
 
   Iguanodon
   Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.
